--- a/css/style.css
+++ b/css/style.css
@@ -335,6 +335,7 @@ path {
     filter: drop-shadow(-3px 16px 13px rgb(255, 255, 255));
 }
 
+/* commits */
 /* Seccion de intriga y acción */
 #action{
     background-color: black;
