--- a/css/style.css
+++ b/css/style.css
@@ -620,6 +620,7 @@ img[alt="top1"]{
     display: grid;
     grid-template-columns: 1fr 15fr 1fr;
     align-items: start;
+    height: 147px;
 }
 
 span.descripcion-canvas.m-0 {
@@ -632,6 +633,30 @@ i.bi.bi-x.fs-2{
     font-size: calc(1.375rem + 1.5vw)!important;
     position: absolute;
     margin: -0.875rem 0px 0px -0.875rem;
+}
+
+div#efectoCanvas {
+    height: 220px;
+}
+
+.botones__canvas {
+    padding-top: 10px;
+    height: 110px;
+}
+
+.botones__canvas .ver {
+    background-color: #1B1B1B;
+    height: 37px;
+    border-radius: 3px;
+}
+.ver__btn {
+    padding: 1px 60px;
+}
+
+span.fw-normal{
+    font-size: 12px;
+    margin-top: -5px;
+    opacity: .6;
 }
 /* .orange{
     background-color: red;
