--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ header nav{
 
 .nav__logo{
     text-align: center;
-    margin-top: 30px;
+    margin-top: 2.875rem;
 }
 /* Fin del logo */
 
@@ -35,11 +35,12 @@ header nav{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: 5rem 0 0;
 }
 .title__user h1{
     color: white;
     font-weight:unset;
-    font-size: 1rem;
+    font-size: 1.20rem;
     text-align: center;
     margin-top: 4.1875rem;
 }
@@ -51,16 +52,28 @@ header nav{
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
+    margin: 0 3.125rem;
+    color: #a19f9f;
+}
+
+[class^="usuario__"]{
+    transition: .2s;
+}
+[class^="usuario__"]:hover{
+    color: white;
 }
 
 .users img{
+    display: block;
     margin: 1.25rem 0.9375rem 0rem 0.9375rem;
     border-radius: 0.3125rem;
     cursor: pointer;
+    transition: all .3s;
 }
 .users img:hover{
-    border: 0.1875rem solid white;
+    outline: 0.15rem solid white;
 }
+
 
 .users .usuario__plus {
     border-radius: 0.3125rem;
@@ -81,7 +94,7 @@ header nav{
 }
 
 .users p {
-    color: rgb(255, 255, 255);
+    /* color: rgb(255, 255, 255); */
     text-align: center;
     font-size: 1rem;
     margin-top: 0.75rem;
@@ -89,8 +102,8 @@ header nav{
 }
 
 .fa-plus-circle + p {
-    margin: 1.375rem 0 0 0;
-    font-size: 1.125rem;
+    margin: 1.2rem 0 0 0;
+    font-size: 1.08rem;
 }
 
 /* Parte del usuario */
@@ -237,6 +250,12 @@ a{
 .fa, .fas {
     font-weight: 900;
     color: white;
+    transition: all .5s;
+}
+.fa, .fas:hover {
+    font-weight: 900;
+    color: #d8d8d8;
+    transform: rotate(90deg);
 }
 
 .boton__play{
@@ -659,11 +678,7 @@ span.fw-normal{
     margin-top: -5px;
     opacity: .6;
 }
-/* .orange{
-    background-color: red;
-    height: 1430px;
-    width: 100px;
-} */
+
 /* Para celulalares M - l */
 @media (min-width:576px) {
     .logo__home{
@@ -677,5 +692,28 @@ span.fw-normal{
 @media (min-width:768px) {
     .container__menu .logo__home{
         display: inline-block;
+    }
+    .users img{
+        width: 9.375rem;
+        height: 9.375rem;
+    }
+
+    .users .usuario__plus {
+        font-size: 8rem!important;
+    }
+
+    .fa-plus-circle + p {
+        margin: 0.50rem 0 0 1.5rem!important;
+        font-size: 1.125rem!important;
+    }
+
+    .fa-plus-circle {
+        margin: 2rem 0 0 2rem;
+    }
+    .title__user h1 {
+        font-size: 1.5rem;
+    }
+    .nav__logo {
+        margin-top: 5.4375rem;
     }
 }
